# fastapi_template

./: .gitignore  LICENSE  README.md  app.py  database.py  exceptions.py  manage.py  package-lock.json  package.json  pyproject.toml  serverless.yml
alembic/: env.py
alembic/versions/: 654901b132f4_first_migration.py  c79f7aba4334_first_migration.py
api/v1/: foo_routes.py
api/v1/tests/: test_app_routes.py  test_foo_routes.py
config/: __init__.py  default.py  development.py  local.py  production.py  test.py
models/: __init__.py  foo_models.py
models/tests/: test_foo_models.py
scripts/: generate_serverless_config.py
utils/: manager.py  test_utils.py  utils.py
