[tool.poetry]
name = "my-fastapi-app"  
version = "0.0.0"
description = "A generic template for a FastAPI based app"
authors = ["Foo Bar <foo@example.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
mangum = "^0.17.0"
sqlalchemy = "^2.0.13"
black = "^23.3.0"
alembic = "^1.11.0"
psycopg2-binary = "^2.9.6"
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-env = "^0.8.1"
pytest-cov = "^4.1.0"

[tool.pyright]
pythonVersion = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120


[tool.pytest.ini_options]
env = [
    "env=Test"
]
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
omit = ["config/*"]